# os2ds-rules

./: .clangd  .gitignore  .gitlab.yml  .sconsign.dblite  CMakeLists.txt  CMakePresets.json  README.md  SConstruct  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
cpp/: .gitignore  SConstruct
cpp/include/: cpr-detector.hpp
cpp/src/: cpr-detector.cpp
cpp/tests/: test.cpp
docs/: algorithm_documentation.md
include/: address_rule.hpp  cpr-detector.hpp  data_structures.hpp  health_rule.hpp  name_rule.hpp  os2dsrules.hpp  wordlist_rule.hpp
include/datasets/: da_addresses.txt  male_firstnames.txt
lib/: address_rule.cpp  cpr-detector.cpp  data_structures.cpp  ffi.cpp  health_rule.cpp  name_rule.cpp  wordlist_rule.cpp
lib/datasets/: female_firstnames.txt  health_terms.txt  lastnames.txt
py/cpr/detector/: cpr_detector.py
py/cpr/tests/: test_cpr_detector.py
python/: pyproject.toml  setup.py
python/experimental/cpr/tests/benchmarks/: test_benchmark_cpr_detector.py
python/src/cprdetector/: __init__.py  ffi.cpp
python/tests/benchmarks/: test_benchmark_cpr_detector.py
python/tests/benchmarks/data/: list_9_11_victims.html
reference/cpr/detector/: cpr_detector.py
reference/cpr/tests/: test_cpr_detector.py
reference/cpr/tests/benchmarks/: utilities.py
rust/cpr-detector/: Cargo.toml
src/: cpr_detector.py
src/os2ds_rules/: __init__.py  cpr.cpp  ffi.cpp  name_rule.cpp  wordlist_rule.cpp
tests/: test.cpp  testaddress.cpp  testcpr.cpp  testds.cpp  testhealth.cpp  testname.cpp  testwordlist.cpp
tests/benchmarks/: test_benchmark_address_rule.py  test_benchmark_cpr_detector.py  test_benchmark_name_rule.py  test_benchmark_wordlist_rule.py  utilities.py
tests/benchmarks/data/: gcc.txt
