[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "os2ds-rules"
version = "0.0.1"
authors = [
  { name="HackTheOxidation", email="tomas.hagenau@protonmail.ch" },
]
description = "Text processing tool for detecting Danish CPR-numbers."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://codeberg.org/HackTheOxidation/cpr-detector"
"Bug Tracker" = "https://codeberg.org/HackTheOxidation/cpr-detector/issues"

[tool.cibuildwheel]
archs = ["x86_64", "aarch64"]
build-frontend = "pip"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"